styled header css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ashton Moore // Web Developer</title>
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
 
   <body>
@@ -18,7 +19,7 @@
       </nav>
     </header>
 
-    <section>
+    <section class="hero-banner">
       <div>
         <h2>Subtitle here!</h2>
       </div>
