further updated css

--- a/main/index.html
+++ b/main/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ashton Moore // Web Developer</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body>
@@ -21,12 +21,13 @@
 
     <section class="hero-banner">
       <div>
-        <h2>Subtitle here!</h2>
+        <h2>Delevoping for the future!</h2>
       </div>
     </section>
 
-    <main>
-      <section>
+    <main class="page-wrapper">
+      <section class="page-section" id="about">
+        <h2>About Me</h2>
         <div>
           <p>
             Helvetica put a bird on it church-key Blue Bottle banjo bespoke
@@ -49,28 +50,52 @@
         </div>
       </section>
 
-      <section>
+      <section class="page-section" id="work">
         <h2>Work</h2>
-        <div>
-          <a href="http://">Project 1</a>
+        <div class="flex-container">
+          <a href="http://" class="flex-item surf-report">
+            <div>
+              <h3>Surf Report</h3>
+              <span>MERN Stack</span>
+            </div>
+          </a>
 
-          <a href="http://">Project 2</a>
+          <a href="http://" class="flex-item led-wall">
+            <div>
+              <h3>LED Wall</h3>
+              <span>Node/IoT</span>
+            </div>
+          </a>
 
-          <a href="http://">Project 3</a>
+          <a href="http://" class="flex-item react-calc">
+            <div><h3>Calculator</h3>
+            <span>React/JavaScript/CSS</span>
+          </div>
+          </a>
 
-          <a href="http://">Project 4</a>
+          <a href="http://" class="flex-item pastel-puzzles">
+            <div>
+              <h3>Pastel Puzzle</h3>
+              <span>MERN Stack</span>
+            </div>
+          </a>
 
-          <a href="http://">Project 4</a>
+          <a href="http://" class="flex-item run-buddy">
+            <div>
+              <h3>Run Buddy</h3>
+              <span>HTML/CSS</span>
+            </div>
+          </a>
         </div>
       </section>
 
-      <section>
+      <section class="page-section contact" id="contact">
         <h2>Contact Me</h2>
         <div>
-            <address>
-                <a href="mailto:ashtonmoore89@gmail.com">ashtonmoore89@gmail.com</a>
-                <a href="http://">GitHub</a>
-            </address>
+          <address>
+            <a href="mailto:ashtonmoore89@gmail.com">ashtonmoore89@gmail.com</a>
+            <a href="http://">GitHub</a>
+          </address>
         </div>
       </section>
     </main>
