--- a/main/index.html
+++ b/main/index.html
@@ -13,7 +13,7 @@
       <h1>Ashton Moore</h1>
       <nav>
         <a href="#">About Me</a>
-        <a href="http://">Work</a>
+        <a href="#work">Work</a>
         <a href="http://">Contact Me</a>
         <a href="http://">Resume</a>
       </nav>
@@ -30,22 +30,7 @@
         <h2>About Me</h2>
         <div>
           <p>
-            Helvetica put a bird on it church-key Blue Bottle banjo bespoke
-            brunch Etsy authentic Marfa quinoa typewriter plaid direct trade
-            small batch wayfarers bicycle rights cliche craft beer gastropub
-            single-origin coffee Godard Carles you probably haven't heard of
-            them irony pickled kitsch synth sriracha gentrify literally heirloom
-            blog Truffaut paleo scenester
-          </p>
-          <p>
-            Echo Park sriracha Pinterest vegan biodiesel 90's irony iPhone
-            Kickstarter Carles crucifix kitsch narwhal dreamcatcher pickled
-            trust fund selvage art party letterpress Tumblr post-ironic kogi
-            Thundercats Tonx Brooklyn Pitchfork Odd Future authentic normcore
-            freegan leggings Schlitz chambray organic tousled retro fap squid
-            street art church-key fashion axe Wes Anderson bespoke whatever
-            gentrify banh mi you probably haven't heard of them American Apparel
-            next level pug ugh.
+            I'm a fullstack developer from the PNW. I have a cat!
           </p>
         </div>
       </section>
