updated p elements, updated css

--- a/main/index.html
+++ b/main/index.html
@@ -12,26 +12,32 @@
     <header>
       <h1>Ashton Moore</h1>
       <nav>
-        <a href="#">About Me</a>
+        <a href="#about">About Me</a>
         <a href="#work">Work</a>
-        <a href="http://">Contact Me</a>
-        <a href="http://">Resume</a>
+        <a href="#contact">Contact Me</a>
+        <a href="#resume">Resume</a>
       </nav>
     </header>
-
-    <section class="hero-banner">
-      <div>
-        <h2>Delevoping for the future!</h2>
-      </div>
-    </section>
+    <!-- https://www.w3schools.com/howto/howto_css_hero_image.asp -->
+    <section class="hero-banner"></section>
 
     <main class="page-wrapper">
       <section class="page-section" id="about">
         <h2>About Me</h2>
         <div>
           <p>
-            I'm a fullstack developer from the PNW. I have a cat!
+            Hi, My name is Ashton! I'm a student fullstack developer living in
+            Seattle.
           </p>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Suspendisse interdum consectetur libero id faucibus nisl tincidunt
+            eget nullam. Eget nunc lobortis mattis aliquam faucibus purus in
+            massa tempor.
+          </p>
+          <p>Check out some of my work!</p>
         </div>
       </section>
 
@@ -53,9 +59,10 @@
           </a>
 
           <a href="http://" class="flex-item react-calc">
-            <div><h3>Calculator</h3>
-            <span>React/JavaScript/CSS</span>
-          </div>
+            <div>
+              <h3>Calculator</h3>
+              <span>React/JavaScript/CSS</span>
+            </div>
           </a>
 
           <a href="http://" class="flex-item pastel-puzzles">
@@ -79,7 +86,7 @@
         <div>
           <address>
             <a href="mailto:ashtonmoore89@gmail.com">ashtonmoore89@gmail.com</a>
-            <a href="http://">GitHub</a>
+            <a href="https://github.com/azm89">GitHub</a>
           </address>
         </div>
       </section>
